@@ -1,4 +1,8 @@
-﻿drkns 24.06.2014 19:41:46 +0200 - build 3961
+﻿w17 25.06.2014 00:16:56 +0400 - build 3962
+
+1. Уточнение 3960.
+
+drkns 24.06.2014 19:41:46 +0200 - build 3961
 
 1. Уточнение 3958.
 
